--- a/4_Graphs.ipynb
+++ b/4_Graphs.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:26.539098Z",
-     "start_time": "2020-04-03T14:31:25.490541Z"
+     "end_time": "2020-04-04T14:05:23.107422Z",
+     "start_time": "2020-04-04T14:05:19.044042Z"
     }
    },
    "outputs": [],
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T12:55:52.868902Z",
-     "start_time": "2020-04-04T12:55:51.482971Z"
+     "end_time": "2020-04-04T14:05:23.706971Z",
+     "start_time": "2020-04-04T14:05:23.109152Z"
     }
    },
    "outputs": [
@@ -245,7 +245,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,33 +253,6 @@
    "source": [
     "df=pd.read_csv(\"Data/df_final.csv\", sep=\";\", index_col=0)\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 402,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-04T12:56:04.201953Z",
-     "start_time": "2020-04-04T12:56:03.401803Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "M    3514\n",
-       "F     331\n",
-       "Name: Sexe, dtype: int64"
-      ]
-     },
-     "execution_count": 402,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['Sexe'].value_counts()"
    ]
   },
   {
@@ -308,8 +281,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:34.321730Z",
-     "start_time": "2020-04-03T14:31:26.884451Z"
+     "end_time": "2020-04-04T14:05:34.945157Z",
+     "start_time": "2020-04-04T14:05:27.611268Z"
     },
     "code_folding": []
    },
@@ -324,8 +297,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:34.367478Z",
-     "start_time": "2020-04-03T14:31:34.326382Z"
+     "end_time": "2020-04-04T14:05:35.016615Z",
+     "start_time": "2020-04-04T14:05:34.945157Z"
     }
    },
    "outputs": [],
@@ -342,8 +315,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:34.481036Z",
-     "start_time": "2020-04-03T14:31:34.371465Z"
+     "end_time": "2020-04-04T14:05:35.134896Z",
+     "start_time": "2020-04-04T14:05:35.026427Z"
     }
    },
    "outputs": [],
@@ -376,8 +349,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:34.580573Z",
-     "start_time": "2020-04-03T14:31:34.486417Z"
+     "end_time": "2020-04-04T14:05:35.266820Z",
+     "start_time": "2020-04-04T14:05:35.144706Z"
     }
    },
    "outputs": [],
@@ -391,8 +364,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:34.606199Z",
-     "start_time": "2020-04-03T14:31:34.587206Z"
+     "end_time": "2020-04-04T14:05:35.287859Z",
+     "start_time": "2020-04-04T14:05:35.267813Z"
     }
    },
    "outputs": [],
@@ -405,8 +378,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:34.679180Z",
-     "start_time": "2020-04-03T14:31:34.617041Z"
+     "end_time": "2020-04-04T14:05:35.457642Z",
+     "start_time": "2020-04-04T14:05:35.296469Z"
     }
    },
    "outputs": [],
@@ -419,8 +392,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:34.721150Z",
-     "start_time": "2020-04-03T14:31:34.690035Z"
+     "end_time": "2020-04-04T14:05:35.532235Z",
+     "start_time": "2020-04-04T14:05:35.468904Z"
     }
    },
    "outputs": [],
@@ -447,8 +420,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:34.763968Z",
-     "start_time": "2020-04-03T14:31:34.725357Z"
+     "end_time": "2020-04-04T14:05:41.223427Z",
+     "start_time": "2020-04-04T14:05:41.204135Z"
     }
    },
    "outputs": [],
@@ -464,15 +437,15 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:58.971023Z",
-     "start_time": "2020-04-03T14:31:34.771187Z"
+     "end_time": "2020-04-04T14:06:07.223142Z",
+     "start_time": "2020-04-04T14:05:41.253860Z"
     }
    },
    "outputs": [],
    "source": [
     "for punctuation in ['.', ',', ';'] :\n",
     "    df_quartier = pd.concat([pd.Series(row['Sexe'], row['Quartier'].split(punctuation))              \n",
-    "                    for _, row in df_quartier.iterrows()]).reset_index().rename(columns={'index' : 'Quartier', 0:'Sexe'})\n"
+    "                    for _, row in df_quartier.iterrows()]).reset_index().rename(columns={'index' : 'Quartier', 0:'Sexe'})"
    ]
   },
   {
@@ -480,8 +453,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:59.043846Z",
-     "start_time": "2020-04-03T14:31:58.975103Z"
+     "end_time": "2020-04-04T14:06:07.296577Z",
+     "start_time": "2020-04-04T14:06:07.223142Z"
     }
    },
    "outputs": [],
@@ -498,8 +471,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:59.132791Z",
-     "start_time": "2020-04-03T14:31:59.044846Z"
+     "end_time": "2020-04-04T14:06:07.390014Z",
+     "start_time": "2020-04-04T14:06:07.300503Z"
     }
    },
    "outputs": [],
@@ -533,8 +506,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:59.181010Z",
-     "start_time": "2020-04-03T14:31:59.132791Z"
+     "end_time": "2020-04-04T14:07:48.483296Z",
+     "start_time": "2020-04-04T14:07:48.440753Z"
     }
    },
    "outputs": [],
@@ -548,8 +521,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:59.206071Z",
-     "start_time": "2020-04-03T14:31:59.186050Z"
+     "end_time": "2020-04-04T14:07:48.783101Z",
+     "start_time": "2020-04-04T14:07:48.771025Z"
     }
    },
    "outputs": [],
@@ -562,8 +535,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:59.275042Z",
-     "start_time": "2020-04-03T14:31:59.215461Z"
+     "end_time": "2020-04-04T14:07:49.230682Z",
+     "start_time": "2020-04-04T14:07:49.222016Z"
     }
    },
    "outputs": [],
@@ -576,8 +549,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-03T14:31:59.336116Z",
-     "start_time": "2020-04-03T14:31:59.281116Z"
+     "end_time": "2020-04-04T14:07:49.852395Z",
+     "start_time": "2020-04-04T14:07:49.831595Z"
     }
    },
    "outputs": [],
@@ -601,11 +574,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T13:46:33.959052Z",
-     "start_time": "2020-04-04T13:46:33.954329Z"
+     "end_time": "2020-04-04T14:07:57.632430Z",
+     "start_time": "2020-04-04T14:07:55.855264Z"
     }
    },
    "outputs": [],
@@ -615,11 +588,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T13:05:30.319134Z",
-     "start_time": "2020-04-04T13:05:30.228480Z"
+     "end_time": "2020-04-04T14:07:57.714425Z",
+     "start_time": "2020-04-04T14:07:57.637543Z"
     }
    },
    "outputs": [],
@@ -631,11 +604,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T13:14:31.233063Z",
-     "start_time": "2020-04-04T13:14:31.204253Z"
+     "end_time": "2020-04-04T14:08:00.823099Z",
+     "start_time": "2020-04-04T14:08:00.800644Z"
     }
    },
    "outputs": [],
@@ -649,38 +622,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T13:29:33.922764Z",
-     "start_time": "2020-04-04T13:29:33.910734Z"
+     "end_time": "2020-04-04T14:08:13.057902Z",
+     "start_time": "2020-04-04T14:08:13.045550Z"
     }
    },
    "outputs": [],
    "source": [
     "text_f=' '.join(jobs_list_w)\n",
     "text_m=' '.join(jobs_list_m)\n",
-    "file = open(\"Wordcloud/text_f.txt\",'w',  encoding=\"utf-8\") \n",
+    "file = open(\"Wordclouds/text_f.txt\",'w',  encoding=\"utf-8\") \n",
     "file.write(text_f) \n",
     "file.close()\n",
-    "file = open(\"Wordcloud/text_m.txt\",'w',  encoding=\"utf-8\") \n",
+    "file = open(\"Wordclouds/text_m.txt\",'w',  encoding=\"utf-8\") \n",
     "file.write(text_m) \n",
     "file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T13:37:49.915406Z",
-     "start_time": "2020-04-04T13:37:46.946200Z"
+     "start_time": "2020-04-04T14:09:43.142Z"
     },
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "stylecloud.gen_stylecloud(file_path=\"Wordcloud/text_f.txt\", \n",
+    "stylecloud.gen_stylecloud(file_path=\"Wordclouds/text_f.txt\", \n",
     "                        icon_name=\"fas fa-female\", \n",
     "                        palette='colorbrewer.sequential.RdPu_7')"
    ]
@@ -696,7 +668,7 @@
    },
    "outputs": [],
    "source": [
-    "stylecloud.gen_stylecloud(file_path=\"Wordcloud/text_m.txt\", \n",
+    "stylecloud.gen_stylecloud(file_path=\"Wordclouds/text_m.txt\", \n",
     "                        icon_name=\"fas fa-male\", \n",
     "                        palette='colorbrewer.sequential.PuBu_9')"
    ]
