--- a/3_Wikipedia.ipynb
+++ b/3_Wikipedia.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:32.767810Z",
-     "start_time": "2020-04-01T15:07:32.762861Z"
+     "end_time": "2020-04-07T11:08:59.215087Z",
+     "start_time": "2020-04-07T11:08:58.278245Z"
     }
    },
    "outputs": [],
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:33.245995Z",
-     "start_time": "2020-04-01T15:07:33.134178Z"
+     "end_time": "2020-04-07T11:09:00.063402Z",
+     "start_time": "2020-04-07T11:08:59.915218Z"
     }
    },
    "outputs": [],
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:33.623842Z",
-     "start_time": "2020-04-01T15:07:33.592924Z"
+     "end_time": "2020-04-07T11:09:00.204053Z",
+     "start_time": "2020-04-07T11:09:00.171932Z"
     }
    },
    "outputs": [],
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:48.659916Z",
-     "start_time": "2020-04-01T15:07:35.867018Z"
+     "end_time": "2020-04-07T11:09:01.313128Z",
+     "start_time": "2020-04-07T11:09:00.854407Z"
     }
    },
    "outputs": [],
@@ -72,11 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:48.669718Z",
-     "start_time": "2020-04-01T15:07:48.661739Z"
+     "end_time": "2020-04-07T11:09:01.324942Z",
+     "start_time": "2020-04-07T11:09:01.314967Z"
     }
    },
    "outputs": [],
@@ -111,11 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:48.711427Z",
-     "start_time": "2020-04-01T15:07:48.671713Z"
+     "end_time": "2020-04-07T11:09:01.878056Z",
+     "start_time": "2020-04-07T11:09:01.844119Z"
     }
    },
    "outputs": [],
@@ -129,11 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:48.737390Z",
-     "start_time": "2020-04-01T15:07:48.713411Z"
+     "end_time": "2020-04-07T11:09:02.295449Z",
+     "start_time": "2020-04-07T11:09:02.267526Z"
     }
    },
    "outputs": [],
@@ -159,11 +159,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:48.842433Z",
-     "start_time": "2020-04-01T15:07:48.739342Z"
+     "end_time": "2020-04-07T11:09:03.269078Z",
+     "start_time": "2020-04-07T11:09:03.175995Z"
     }
    },
    "outputs": [],
@@ -194,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:52.360494Z",
-     "start_time": "2020-04-01T15:07:52.319374Z"
+     "end_time": "2020-04-07T11:09:04.058061Z",
+     "start_time": "2020-04-07T11:09:04.008197Z"
     }
    },
    "outputs": [],
@@ -210,11 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:52.638117Z",
-     "start_time": "2020-04-01T15:07:52.577315Z"
+     "end_time": "2020-04-07T11:09:04.501681Z",
+     "start_time": "2020-04-07T11:09:04.461642Z"
     }
    },
    "outputs": [],
@@ -224,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:52.988913Z",
-     "start_time": "2020-04-01T15:07:52.966978Z"
+     "end_time": "2020-04-07T11:09:04.837885Z",
+     "start_time": "2020-04-07T11:09:04.814908Z"
     }
    },
    "outputs": [],
@@ -240,11 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:55.992051Z",
-     "start_time": "2020-04-01T15:07:55.985107Z"
+     "end_time": "2020-04-07T11:09:05.144088Z",
+     "start_time": "2020-04-07T11:09:05.127139Z"
     }
    },
    "outputs": [
@@ -254,7 +254,7 @@
        "331"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,11 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:07:58.111119Z",
-     "start_time": "2020-04-01T15:07:58.094386Z"
+     "end_time": "2020-04-07T11:09:05.655529Z",
+     "start_time": "2020-04-07T11:09:05.647529Z"
     }
    },
    "outputs": [],
@@ -287,11 +287,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:08:09.388089Z",
-     "start_time": "2020-04-01T15:08:09.380112Z"
+     "end_time": "2020-04-07T11:09:07.503542Z",
+     "start_time": "2020-04-07T11:09:07.493568Z"
     }
    },
    "outputs": [],
@@ -301,11 +301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:09:27.992506Z",
-     "start_time": "2020-04-01T15:09:27.975556Z"
+     "end_time": "2020-04-07T11:09:08.729858Z",
+     "start_time": "2020-04-07T11:09:08.710909Z"
     }
    },
    "outputs": [],
@@ -316,11 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:09:31.759411Z",
-     "start_time": "2020-04-01T15:09:31.749437Z"
+     "end_time": "2020-04-07T11:09:09.374811Z",
+     "start_time": "2020-04-07T11:09:09.367797Z"
     }
    },
    "outputs": [
@@ -332,7 +332,7 @@
        "Name: Sexe, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,11 +343,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:10:02.379784Z",
-     "start_time": "2020-04-01T15:10:02.372802Z"
+     "end_time": "2020-04-07T11:09:10.935576Z",
+     "start_time": "2020-04-07T11:09:10.928605Z"
     }
    },
    "outputs": [
@@ -358,7 +358,7 @@
        "Name: Origine_rue, dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,11 +370,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:10:55.640431Z",
-     "start_time": "2020-04-01T15:10:55.623476Z"
+     "end_time": "2020-04-07T11:09:15.172079Z",
+     "start_time": "2020-04-07T11:09:15.159114Z"
     }
    },
    "outputs": [],
@@ -385,11 +385,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T15:12:17.761150Z",
-     "start_time": "2020-04-01T15:12:17.580113Z"
+     "end_time": "2020-04-07T11:10:03.047783Z",
+     "start_time": "2020-04-07T11:10:03.027823Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Certaines femmes reines ne sont pas comptées\n",
+    "df.loc[(df['NOM de VOIE'].str.startswith('reine')), 'Sexe'] = 'F'\n",
+    "df.loc[(df['NOM de VOIE'].str.startswith('reine')), 'JOBS_list'] = \"['reine']\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-07T11:10:12.741067Z",
+     "start_time": "2020-04-07T11:10:12.516351Z"
     }
    },
    "outputs": [],
